--- a/src/app/person/person-list/person-list.component.html
+++ b/src/app/person/person-list/person-list.component.html
@@ -1,4 +1,4 @@
-<app-person-generator (generateRequest)="generate($event)">
+<app-person-generator (_generateRequest)="generate($event)">
 </app-person-generator>
 
 <table mat-table [dataSource]="dataSource | async" class="mat-elevation-z8">
