navigation to page About

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,7 @@
 <p>
-	Ce test technique a pour objectif de valider les compétences Angular du Candidat.
+  Ce test technique a pour objectif de valider les compétences Angular du
+  Candidat.
 </p>
 <p>
-	<a routerLink="/" mat-button>Retour</a>
+  <a routerLink="/" mat-button>Retour</a>
 </p>
