fixed person generation with criterias

--- a/src/app/person/person-list/person-list.component.scss
+++ b/src/app/person/person-list/person-list.component.scss
@@ -1,4 +1,8 @@
 :host {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
+}
+
+.mat-header-cell {
+  text-transform: capitalize;
 }
