--- a/src/app/person/person-list/person-list.component.html
+++ b/src/app/person/person-list/person-list.component.html
@@ -1,37 +1,31 @@
 <app-person-generator (_generateRequest)="generate($event)">
 </app-person-generator>
 
-<table mat-table [dataSource]="dataSource | async" class="mat-elevation-z8">
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef>#</th>
-    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="firstName">
-    <th mat-header-cell *matHeaderCellDef>Prénom</th>
-    <td mat-cell *matCellDef="let element">{{ element.firstName }}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="lastName">
-    <th mat-header-cell *matHeaderCellDef>Nom</th>
-    <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="gender">
-    <th mat-header-cell *matHeaderCellDef>Sexe</th>
-    <td mat-cell *matCellDef="let element">
-      <ng-container *ngIf="element.gender === 'Male'; else otherGender">
-        {{ "MALE" | translate }}
-      </ng-container>
-      <ng-template #otherGender>
-        {{ "FEMALE" | translate }}
-      </ng-template>
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="email">
-    <th mat-header-cell *matHeaderCellDef>Email</th>
-    <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <ng-container *ngFor="let col of displayedColumns">
+    <ng-container [matColumnDef]="col">
+      <!-- HEADER -->
+      <th mat-header-cell *matHeaderCellDef>
+        <ng-container *ngIf="col !== 'id'; else idColumn">
+          {{ col | translate }}
+        </ng-container>
+        <ng-template #idColumn>#</ng-template>
+      </th>
+      <!-- ROWS -->
+      <td mat-cell *matCellDef="let element">
+        <ng-container *ngIf="col !== 'gender'; else genderTemplate">
+          {{ element[col] }}
+        </ng-container>
+        <ng-template #genderTemplate>
+          <ng-container *ngIf="element.gender === 'Male'; else otherGender">
+            {{ "MALE" | translate }}
+          </ng-container>
+          <ng-template #otherGender>
+            {{ "FEMALE" | translate }}
+          </ng-template>
+        </ng-template>
+      </td>
+    </ng-container>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
